<resources>
    <string name="app_name">Sejima Android Sample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sejima Android</string>
    <string name="nav_header_subtitle">contact@moveupwards.dev</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_components_separator">Components</string>
    <string name="menu_mu_button">MUButton</string>
    <string name="menu_mu_header">MUHeader</string>
    <string name="menu_mu_card">MUCard</string>
    <string name="menu_mu_topbar">MUTopBar</string>
    <string name="menu_mu_pincode">MUPinCode</string>
    <string name="menu_mu_textfield">MUTextField</string>
    <string name="menu_mu_navigationbar">MUNavigationBar</string>
    <string name="menu_mu_avatar">MUAvatar</string>
    <string name="menu_mu_horizontalpager">MUHorizontalPager</string>

    <string name="title">TITLE</string>
    <string name="detail">Detail</string>
</resources>
